--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ navbar-links:
     - Peer-Reviewed Articles: "articles"
     - Data Science/Bioinformatics: "datasci"
   News: "news"
+  Updates: "updates"
   Donors: "donors"
   Social: "social"
   RIPLRT Wiki: "https://wiki.riplrt.com"
