--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: /img/RIPL_EffectRT2.png
+# title-img: /img/RIPL_EffectRT2.png
 
 
 
