--- a/_config.yml
+++ b/_config.yml
@@ -53,13 +53,13 @@ title-img: /img/RIPL_EffectRT2.png
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "#00CED1"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#00CED1"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#00CED1"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
