added links to footer

--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,12 @@ footer-link-col: "#404040"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Copyrights RIPL_Effect Research Team 
+  email: "contactus@riplrt.com"
+  facebook: RIPLEffectRT
+  github: riplrt
+  twitter: riplrt
+  instagram: ripleffectrt
+  youtube: channel/RIPL_EffectRT
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
