--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
   Publications: 
     - Peer-Reviewed Articles: "articles"
     - Data Science/Bioinformatics: "datasci"
-  News: "blog"
+  Blog: "blog"
   Donors: "donors"
   Social: "social"
   RIPLRT Wiki: "https://wiki.riplrt.com"
