--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ google_analytics: "UA-103557590-3"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-# disqus: ""
+disqus: "riplrt"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
