--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ navbar-links:
   About Us: 
     - Mission: "mission"
     - Team Members: "members"
-  Publications: 
-    - Peer-Reviewed: "articles"
+    - Publications: "publications"
     - Data Science: "datasci"
   Blog: "blog"
   Donors:
@@ -44,7 +43,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/RIPL_EffectRT.png"
+avatar: "/img/RIPL_EffectRT.png"
 
 
 
