remove riplrt from wiki nav bar

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navbar-links:
   Social: 
     - In Facebook: "facebook"
     - In Twitter: "twitter"
-  RIPLRT Wiki: "https://wiki.riplrt.com"
+  Wiki: "https://wiki.riplrt.com"
 
 
 
