--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ navbar-links:
   Publications: 
     - Peer-review: "articles"
     - Data Science: "datasci"
-  Blog/Social: 
-    - Blog: "blog"
+  Blog: "blog"
+  Social: 
     - In Facebook: "facebook"
-    - In Twitter: " twitter"
+    - In Twitter: "twitter"
   Donors:
     - Our Donors: "donors"
     - Funding Campaign: "campaign"
@@ -44,7 +44,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/RIPL_EffectRT.png"
+# avatar: "/img/RIPL_EffectRT.png"
 
 
 
