added mentoring nav bar

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
     - Our Mission: "mission"
     - Team Members: "members"
     - In the Lab: "lab"
+    - Mentoring: "mentoring"
     - In Facebook: "facebook"
     - In Twitter: "twitter"
   Publications: 
