--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   github: riplrt
   twitter: riplrt
   instagram: ripleffectrt
-  youtube: channel/RIPL_EffectRT
+  youtube: channel/UCifPv5PUsx8gVHbUjgcruXA
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
