--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ baseurl: ""
 
 # Name of website
 title: RIPL_Effect Research Team
-subtitle: Respiratory and Immunology Project At Larkin University
+subtitle: Respiratory and Immunology Project and Laboratory Research Team
 
 # Short description of your site
-description: Respiratory and Immunology Project At Larkin University
+description: Respiratory and Immunology Project and Laboratory Research Team 
 
 # --- Navigation bar options --- #
 
