--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: RIPL_Effect Research Team
+title: RIPL Research Team
 subtitle: Respiratory and Immunology Project and Laboratory Research Team
 
 # Short description of your site
