updated nav page

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,6 @@ navbar-links:
     - Team Members: "members"
     - In the Lab: "lab"
     - Mentoring: "mentoring"
-    - In Facebook: "facebook"
-    - In Twitter: "twitter"
   Publications: "publications"
   Blog: "blog"
   Donors: "donors"
@@ -77,7 +75,7 @@ footer-link-col: "#404040"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Copyrights the RIPLRT 
-  email: "contactus@riplrt.com"
+  email: "friveram@riplrt.com"
   facebook: RIPLRT
   github: riplrt
   twitter: riplrt
@@ -89,7 +87,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  email: "contactus@riplrt.com"
+  email: "friveram@riplrt.com"
   facebook: RIPLRT
   github: riplrt
   twitter: riplrt
