--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ author:
   facebook: RIPLRT
   github: riplrt
   twitter: riplrt
-  instagram: ripleffectrt
-  youtube: channel/UCifPv5PUsx8gVHbUjgcruXA
+  instagram: riplrt
+  youtube: channel/UChqu0NqnfPSwB1kPq-tJ_cQ
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -91,8 +91,8 @@ social-network-links:
   facebook: RIPLRT
   github: riplrt
   twitter: riplrt
-  instagram: ripleffectrt
-  youtube: channel/RIPL_EffectRT
+  instagram: riplrt
+  youtube: channel/channel/UChqu0NqnfPSwB1kPq-tJ_cQ
 
 # Select which share links to show in posts
 share-links-active:
